chore: snapshot current JDK25 refactor state